[tool.black]
line-length = 120
# extend-exclude = '''
# /(
#   # Add dirs on top of the defaults
#   | other
#   # NOTE still having issue in excluding single files here, it works via command line
#   # | .*stub
# )/
# '''


[tool.isort]
profile = "black"
line_length = 120
extend_skip_glob = ["other", "*stub.py"]
known_first_party = []
known_local_folder = []


[tool.mypy]
exclude = ['other']
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
strict_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.poetry]
name = "man-group-pydata2022"
version = "0.1.0"
description = ""
authors = ["Giacomo Snidero <giacomo.snidero@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastparquet = "^0.8.1"
pandas = "^1.4.2"
plotly = "^5.8.2"
jupyterlab = "^3.4.3"
dtale = "^2.6.0"
kaleido = "0.2.1"
itables = "^1.1.1"

[tool.poetry.dev-dependencies]
black = { version = "*", extras = ["jupyter"] }
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-variables-names = "*"
ipykernel = "*"
isort = "*"
mypy = "*"
nbqa = "*"
pandas-vet = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
